--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-transformers>=4.40.0
-torch>=2.0.0
-sentencepiece  
-scipy
-numpy
-tqdm
+streamlit
+transformers[sentencepiece]
+torch
+nltk
+pymupdf
+pandas
