--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,16 @@
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
+[project]
+name = "pdfsummarizer"
+version = "0.1.0"
+description = "Summarize PDF papers using HuggingFace models"
+dependencies = [
+    "transformers[sentencepiece]",
+    "pymupdf",
+    "nltk",
+    "pandas"
+]
+
+[project.scripts]
+pdfsummarizer = "pdfsummarizer.cli:main"
